# lora-weight-device

./: .gitignore  README.md  kicad_schematic_autowire_solution.md  project.md  review.md  schematic_layout_algorithms.md  smart_placement.md  smart_wiring_algo_ideas.md  urine_monitor-erc.rpt
.github/: FUNDING.yml  SUPPORT.md
backend/: server.py
datasheets/: RAK3172.url  RAK5146.url  RAK5146_datasheet.md  RAK7268V2.url  rak3172_datasheet.md  rak7268v2_datasheet.md
datasheets_notes/: gdey0213b74_pinout.txt  hx711_summary.txt  rak3172_pin_summary.txt  review_20250308.txt  review_20250309.txt  review_20250310.txt  review_20250311.txt  review_20250312.txt  review_20250313.txt  review_20250314.txt  review_20250315.txt  review_20250316.txt  review_20250317.txt  review_20250318.txt  review_20250319.txt
design_docs/: detailed_bom.md  firmware_design.md  gateway_backup_design.md  gateway_config_guide.md  hardware_design.md  mechanical_design.md  pcb_footprint_spec.md  pcb_layout_guide.md  schematic_generation_notes.md  software_design.md  solution_proposal.md  system_architecture.md
firmware/: CMakeLists.txt
firmware/Core/Inc/: app_lorawan.h  epd_driver.h  hx711_driver.h  main.h  stm32wlxx_hal.h
firmware/Core/Src/: app_lorawan.c  epd_driver.c  hx711_driver.c  main.c  stm32wlxx_hal_mock.c
gateway_firmware/: CMakeLists.txt  firmware_design.md
tools/: auto_layout_pcb.py  export_dsn.py  gen_debug.py  gen_urine_schematic.py  gen_urine_schematic.py.bak  generate_all_pcb.sh  import_ses.py  process_bom_for_jlc.py  regen_kicad_project.sh  run_autoroute.py  test_minimal.py  (+1 more)
(+19 files in other folders)
